--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Hair calc</title>
     <link rel="stylesheet" href="./hair-calc.css">
 </head>
+
 <body>
     <div class="wrapper">
         <div class="container">
@@ -26,7 +27,7 @@
         </figure>    
         <button class="button">HAARANALYSE STARTEN</button>
     </div>
-
+<div>nono delete</div>
         
 
         <div class="second-page">
